package com.nanyin.pattern.visitor;

public interface Visitor {
    void visit(OperateNodeA operateNodeA);
    void visit(OperateNodeB operateNodeB);
}

